--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,5 +20,5 @@ jobs:
       - run: python packscript/packscript.py c -o AA_Endgame_Practice.zip
       - uses: actions/upload-artifact@v4
         with:
-          name: AA_Endgame_Practice
+          name: AA_Endgame_Practice_1.21
           path: AA_Endgame_Practice.zip
