--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           repository: slackow/packscript
           path: packscript
+          ref: dev
       - run: python packscript/packscript.py c -o AA_Endgame_Practice
       - uses: actions/upload-artifact@v4
         with:
